# 21-

./: CMakeLists.txt  ft_printf.h  main.c  process_int_specifier_support.c  process_int_specifiers.c  process_pointer_specifiers.c  process_types.c  results.txt
get_next_line/: CMakeLists.txt  get_next_line.c  get_next_line.h  get_next_line_utils.c  gnl1.c  main.c
minirt 2/: CMakeLists.txt  a.out  main.c  minirt.h  render.c
minirt 2/canvas/: canvas.c  canvas.h  color.c
minirt 2/linalg/: linalg.h  vecalg.c
minirt 2/scene/: camera.c  scene.c  scene.h
minirt 2/scene/scene_objects/: objects.h  sphere.c
minirt/raytrace/: ray.c  raytrace.c  raytrace.h
minirt/scene/: scene.c
minirt3/: CMakeLists.txt  main.c  minirt.h  render.c  scene.rt
minirt3/canvas/: canvas.c  color.c
minirt3/gnl/: get_next_line.c  get_next_line.h
minirt3/linalg/: linalg.h  vecalg.c
minirt3/raytrace/: intersection.c  ray.c  raytrace.c  raytrace.h
minirt3/scene/: camera.c  parse.c  scene.c  scene.h
minirt4/: CMakeLists.txt  main.c  render.c  scene.rt
minirt4/canvas/: canvas.c  color.c
minirt4/linalg/: linalg.h  vecalg.c
minirt4/raytrace/: ray.c
minirt4/scene/: camera.c  light.c  parse_objects1.c  parse_utils.c  scene.c  scene.h
minirt_final/: CMakeLists.txt  main.c  minirt.h  mlx_handle.c  render.c  scene.rt
minirt_final/bmp/: bmp.c
minirt_final/canvas/: canvas.c  canvas.h  color.c
minirt_final/linalg/: linalg.h  vecalg1.c  vecalg2.c
minirt_final/raytrace/: intersection.c  ray.c  raytrace.c  raytrace.h
minirt_final/scene/: camera.c  light.c  parse.c  parse_objects.c  parse_scene_elems.c  parse_utils_1.c  parse_utils_2.c  scene.c  scene.h
minirt_final/scene/scene_objects/: cylinder.c  object.c  objects.h  plane.c  sphere.c  square.c  triangle.c
printf/: CMakeLists.txt  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_itoa.c  ft_printf.c  ft_printf.h  ft_ptoa.c  ft_strchr.c  ft_strdup.c  ft_strlen.c  ft_utoa.c  ft_xtoa.c  get_placeholder.c  get_specifiers.c  main.c  parse.c  process_char_specifiers.c  process_int_specifier_support.c  process_int_specifiers.c  process_pointer_specifiers.c  process_specifiers.c  process_str_specifiers.c  process_types.c  processing.c
ptf/: Makefile  ft_printf.c  ft_printf.h  get_placeholder.c  get_specifiers.c  parse.c  pf_atoi.c  pf_bzero.c  pf_calloc.c  pf_isdigit.c  pf_itoa.c  pf_ptoa.c  pf_strchr.c  pf_strdup.c  pf_strlen.c  pf_utoa.c  pf_xtoa.c  process_char_specifiers.c  process_int_specifier_support.c  process_int_specifiers.c  process_pointer_specifiers.c  process_str_specifiers.c  process_types.c  processing.c
rt/: CMakeLists.txt  main.c  minirt.h  raytrace.c  render.c
rt/canvas/: canvas.c  color.c
rt/scene/: scene.c  scene.h
(+18 files in other folders)
